--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -2,8 +2,9 @@
 # For running basic build/run/test you can also use the regular go tools,
 # this is currently added to assist in external testing.
 
-load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
-load("@bazel_gazelle//:def.bzl", "gazelle")
+load("@gazelle//:def.bzl", "gazelle")
+load("@rules_go//go:def.bzl", "go_library", "go_test")
+
 
 # gazelle:prefix github.com/google/rpmpack
 # gazelle:go_naming_convention import_alias
