read: finish implemeting reading from rpm
now we can read and write rpms properly

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -19,6 +19,7 @@ go_library(
         "file_types.go",
         "header.go",
         "rpm.go",
+        "rpm_read.go",
         "sense.go",
         "tags.go",
         "tar.go",
