--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -22,10 +22,11 @@ register_toolchains(
 bazel_dep(name = "rules_go", version = "0.45.1")
 
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
-
 go_sdk.download(version = "1.21.6")
 
 bazel_dep(name = "gazelle", version = "0.35.0")
+
+bazel_dep(name = "circl", version = "1.3.7")
 
 go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
 go_deps.from_file(go_mod = "//:go.mod")
@@ -35,16 +36,18 @@ use_repo(
     "com_github_google_go_cmp",
     "com_github_klauspost_compress",
     "com_github_klauspost_pgzip",
-    "com_github_ulikunitz_xz"
+    "com_github_protonmail_gopenpgp_v2",
+    "com_github_ulikunitz_xz",
 )
 
 bazel_dep(name = "buildifier_prebuilt", version = "6.4.0", dev_dependency = True)
 
 http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")
+
 http_file(
     name = "some-centos9-rpm",
     sha256 = "b58e7ea30c27ecb321d9a279b95b62aef59d92173714fce859bfb359ee231ff3",
     urls = [
-        "https://mirror.stream.centos.org/9-stream/BaseOS/x86_64/os/Packages/alternatives-1.24-1.el9.x86_64.rpm"
-    ]
+        "https://mirror.stream.centos.org/9-stream/BaseOS/x86_64/os/Packages/alternatives-1.24-1.el9.x86_64.rpm",
+    ],
 )
